--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.18.3",
-    "gatsby-image": "^2.2.33",
-    "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-plugin-offline": "^3.0.23",
-    "gatsby-plugin-react-helmet": "^3.1.15",
-    "gatsby-plugin-sharp": "^2.3.3",
-    "gatsby-source-filesystem": "^2.1.38",
-    "gatsby-transformer-sharp": "^2.3.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.19.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+	"name": "piuquen-chocolates",
+	"private": true,
+	"description": "Piuquen Chocolates",
+	"version": "0.1.0",
+	"author": "Penholder Designerd <penhold3r@gmail.com>",
+	"license": "MIT",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"start": "npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-brands-svg-icons": "^5.11.2",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
+		"@fortawesome/react-fontawesome": "^0.1.7",
+		"aos": "^3.0.0-beta.6",
+		"gatsby": "^2.18.4",
+		"gatsby-image": "^2.2.33",
+		"gatsby-plugin-manifest": "^2.2.29",
+		"gatsby-plugin-offline": "^3.0.23",
+		"gatsby-plugin-react-helmet": "^3.1.15",
+		"gatsby-plugin-sass": "^2.1.24",
+		"gatsby-plugin-sharp": "^2.3.3",
+		"gatsby-source-filesystem": "^2.1.38",
+		"gatsby-transformer-sharp": "^2.3.5",
+		"node-sass": "^4.13.0",
+		"node-sass-glob-importer": "^5.3.2",
+		"prop-types": "^15.7.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-helmet": "^5.2.1",
+		"react-scroll": "^1.7.14",
+		"sanitize.css": "^11.0.0"
+	}
 }
