--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
 		"gatsby-plugin-sharp": "^2.3.3",
 		"gatsby-source-filesystem": "^2.1.38",
 		"gatsby-transformer-sharp": "^2.3.5",
+		"i": "^0.3.6",
 		"node-sass": "^4.13.0",
 		"node-sass-glob-importer": "^5.3.2",
+		"npm": "^6.13.4",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
 		"react-scroll": "^1.7.14",
-		"sanitize.css": "^11.0.0"
+		"sanitize.css": "^11.0.0",
+		"submit-form-data": "^1.0.12"
 	}
 }
