--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
 		"react-scroll": "^1.7.14",
+		"react-styled-carousel": "^0.5.1",
 		"sanitize.css": "^11.0.0",
 		"submit-form-data": "^1.0.12"
 	}
